deploy/production/broadcaster.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intranet-production-pod-broadcaster
  namespace: intranet-production
  labels:
    app: intranet-production-pod-broadcaster
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: intranet-production-pod-broadcaster
  template:
    metadata:
      labels:
        app: intranet-production-pod-broadcaster
    spec:
      serviceAccountName: pod-broadcaster-serviceaccount
      containers:
        - name: pod-broadcaster
          image: ghcr.io/ministryofjustice/kubernetes-pod-broadcaster:latest
          resources:
            limits:
              cpu: 200m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 32Mi
          securityContext:
            runAsUser: 1000
          # Run the 'cluster' task, it passes the cluster cert to deno.
          command: ["/bin/sh", "-c"]
          args: ["deno task cluster"]
