deploy/production/deployment.tpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${KUBE_NAMESPACE}
  namespace: ${KUBE_NAMESPACE}
  labels:
    app: ${KUBE_NAMESPACE}
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
  selector:
    matchLabels:
      app: ${KUBE_NAMESPACE}
  template:
    metadata:
      labels:
        app: ${KUBE_NAMESPACE}
    spec:
      volumes:
        - name: uploads
          emptyDir: { }
        - name: php-socket
          emptyDir: { }
      terminationGracePeriodSeconds: 35
      serviceAccountName: ${KUBE_NAMESPACE}-service
      containers:
        - name: nginx
          image: ${ECR_URL}:${IMAGE_TAG_NGINX}
          resources:
            limits:
              cpu: 500m
              memory: 250Mi
            requests:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/public/app/uploads
            - name: php-socket
              mountPath: /sock
          securityContext:
            runAsUser: 101
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
        - name: cron
          image: ${ECR_URL}:${IMAGE_TAG_CRON}
          resources:
            limits:
              cpu: 50m
              memory: 30Mi
            requests:
              cpu: 1m
              memory: 12Mi
          securityContext:
            runAsUser: 3001

        - name: fpm
          image: ${ECR_URL}:${IMAGE_TAG_FPM}
          resources:
            limits:
              # If a pod exceeds its CPU limit, Kubernetes will simply throttle the pod.
              cpu: "4"
              # If a pod exceeds its memory limit, Kubernetes will kill the pod.
              memory: 2000Mi
            requests:
              cpu: 500m
              memory: 600Mi
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/public/app/uploads
            - name: php-socket
              mountPath: /sock
          securityContext:
            runAsUser: 101
          # Check frequently during startup, so that scaling up can happen as fast as possible.
          startupProbe:
            exec:
              command:
              - /usr/local/bin/fpm-health/fpm-readiness.sh
            failureThreshold: 20
            periodSeconds: 5
          # Don't route traffic to this pod if the container is not ready.
          readinessProbe:
            exec:
              command:
              - /usr/local/bin/fpm-health/fpm-readiness.sh
            periodSeconds: 10
            failureThreshold: 1
          # Restart the container if it fails liveness script.
          livenessProbe:
            exec:
              command:
              - /usr/local/bin/fpm-health/fpm-liveness.sh
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                # Run the stop script before stopping the container.
                # Redirect the output to the main process's stderr.
                command: ["ash", "-c",  "/usr/local/bin/fpm-stop.sh >> /proc/1/fd/2"]
