deploy/production/ingress.tpl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intranet-production-ingress
  namespace: intranet-production
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: intranet-production-ingress-intranet-production-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      ${MODSEC_CONFIG}
    nginx.ingress.kubernetes.io/proxy-body-size: "250m"
    # Set vhost so that WP doesn't see prod-intranet.apps... and redirect.
    nginx.ingress.kubernetes.io/upstream-vhost: intranet.justice.gov.uk
    nginx.ingress.kubernetes.io/server-snippet: |
      # Redirect requests for legacy JAC intranet to /?agency=jac
      if ($host = 'jac.intranet.service.justice.gov.uk') {
        return 301 https://intranet.justice.gov.uk/?agency=jac;
      }
      location = /health {
        auth_basic off;
        access_log off;
        default_type text/plain;
        add_header Content-Type text/plain;
        return 200 "OK";
      }
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - prod-intranet.apps.live.cloud-platform.service.justice.gov.uk
  - hosts:
    - intranet.justice.gov.uk
    secretName: intranet-production-cert-secret
  - hosts:
    - jac.intranet.service.justice.gov.uk
    secretName: jac-intranet-service-cert-secret
  rules:
  - host: prod-intranet.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
  - host: intranet.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
  - host: jac.intranet.service.justice.gov.uk
    # This rule will cause Cloud Platform to create a DNS entry for the domain.
    # The redirect in server-snippet will happen before traffic is sent to the backend.
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
